--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,38 +1,57 @@
+trigger: 
+ - master
+
+pool:
+  vmImage: ubuntu-latest
+
+jobs:
+- job: 'Run Checkov'
+  displayName: 'Run Checkov'
+  steps:
+    - checkout: self
+    - task: Bash@3
+      displayName: 'Run Checkov Test'
+      inputs:
+        targetType: 'inline'
+        script: |
+          cd $(System.DefaultWorkingDirectory)
+          pwd
+          ls
+
 # Docker
 # Build a Docker image
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+#trigger:
+#- master
 
-trigger:
-- master
+#resources:
+#- repo: self
 
-resources:
-- repo: self
+#variables:
+#  tag: '$(Build.BuildId)'
 
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: QualityCheckStage
-  displayName: Quality Check Stage
-  jobs:
-  - job: QualityCheck
-    displayName: Run Checkov
-    steps:
-    - script: |
-      echo 'Connell Test'
-    displayName: 'Checkov Static Code Analysis'
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+#stages:
+#- stage: QualityCheckStage
+#  displayName: Quality Check Stage
+#  jobs:
+#  - job: QualityCheck
+#    displayName: Run Checkov
+#    steps:
+#    - script: |
+#      echo Connell Test
+#       pwd
+#- stage: Build
+#  displayName: Build image
+#  jobs:
+#  - job: Build
+#    displayName: Build
+#    pool:
+#      vmImage: ubuntu-latest
+#    steps:
+#    - task: Docker@2
+#      displayName: Build an image
+#      inputs:
+#        command: build
+#        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+#        tags: |
+#          $(tag)
