--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: ubuntu-latest
 
 jobs:
-- job: 'Run Checkov'
+- job: RunCheckov
   displayName: 'Run Checkov'
   steps:
     - checkout: self
