--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ jobs:
           cd $(System.DefaultWorkingDirectory)
           pwd
           ls
+          docker pull bridgecrew/checkov
 
 # Docker
 # Build a Docker image
