Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ jobs:
           pwd
           ls
           docker pull bridgecrew/checkov
+          docker run -t -v /user/tf:/tf bridgecrew/checkov -d /tf
 
 # Docker
 # Build a Docker image
