--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ jobs:
           pwd
           ls
           docker pull bridgecrew/checkov
-          docker run -t -v /user/tf:/tf bridgecrew/checkov -d /tf
+          docker run -t -v /user/tf:/tf bridgecrew/checkov -d .
 
 # Docker
 # Build a Docker image
