--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ jobs:
       displayName: 'Run Checkov Test'
       inputs:
         targetType: 'inline'
+        failOnStderr: false
         script: |
           cd $(System.DefaultWorkingDirectory)
           pwd
