--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,13 @@ jobs:
         testResultsFormat: "JUnit"
         testResultsFiles: "Checkov-Report.xml"
         searchFolder: "$(System.DefaultWorkingDirectory)"
-
+    - task: Docker@2
+      displayName: 'Build Docker Image'
+      inputs:
+        command: build
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(tag)
 
 
 # Docker
