--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,18 @@ jobs:
         testResultsFormat: "JUnit"
         testResultsFiles: "Checkov-Report.xml"
         searchFolder: "$(System.DefaultWorkingDirectory)"
+    - task: Bash@3
+      displayName: 'Run AppThreat SAST-Scan'
+      inputs:
+        targetType: 'inline'
+        failOnStderr: false
+        script: |
+          cd $(System.DefaultWorkingDirectory)
+          pwd
+          docker run --rm -e "WORKSPACE=${PWD}" \
+          -v "$PWD:/app:cached" quay.io/appthreat/sast-scan scan \
+          --src /app \
+          --type nodejs
     - task: Docker@2
       displayName: 'Build Docker Image'
       inputs:
@@ -40,42 +52,3 @@ jobs:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
-
-
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-#trigger:
-#- master
-
-#resources:
-#- repo: self
-
-#variables:
-#  tag: '$(Build.BuildId)'
-
-#stages:
-#- stage: QualityCheckStage
-#  displayName: Quality Check Stage
-#  jobs:
-#  - job: QualityCheck
-#    displayName: Run Checkov
-#    steps:
-#    - script: |
-#      echo Connell Test
-#       pwd
-#- stage: Build
-#  displayName: Build image
-#  jobs:
-#  - job: Build
-#    displayName: Build
-#    pool:
-#      vmImage: ubuntu-latest
-#    steps:
-#    - task: Docker@2
-#      displayName: Build an image
-#      inputs:
-#        command: build
-#        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-#        tags: |
-#          $(tag)
