Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ jobs:
         script: |
           cd $(System.DefaultWorkingDirectory)
           pwd
+          npm install -g pnpm
           pnpm audit
     - task: Bash@3
       displayName: 'Run AppThreat SAST-Scan'
